# trackviz

./: .gitignore  README.md  pyproject.toml
examples/: make_npz_from_custom_triplet.py
tests/: test_predictions.py
trackviz/: __init__.py
trackviz/cli/: main.py
trackviz/gui/: viewer.py
trackviz/io/: predictions.py
trackviz/render/: overlay.py
